ns-3.9 has been tested on the following platforms:

Not all ns-3 options are available on all platforms; consult the
wiki for more information:
http://www.nsnam.org/wiki/index.php/Installation

New user-visible features
-------------------------

Bugs fixed
----------
The following lists many of the bugs that were fixed since ns-3.7, in
many cases referencing the Bugzilla bug number

   - bug 861 - Forwarding drops (due to no route found) were not being logged 
               in IPv4 or IPv6 ascii traces

Known issues
------------

Release 3.8
===========

Availability
------------
This release is immediately available from:
http://www.nsnam.org/releases/ns-allinone-3.8.tar.bz2

Supported platforms
-------------------
ns-3.8 has been tested on the following platforms:
  - linux x86 gcc 4.4.0, 4.3.2, 4.2, 4.1.1, 4.1 and 3.4.6 (debug and optimized)
  - linux x86_64 gcc 4.4.0, 4.3.2, 4.2.4, 4.2.3, 4.2.1, 4.1.3, 3.4.6 (debug and optimized)
  - MacOS X ppc gcc 4.0.x and 4.2.x (debug and optimized)
  - cygwin gcc 4.3.4 (debug and optimized)

Not all ns-3 options are available on all platforms; consult the
wiki for more information:
http://www.nsnam.org/wiki/index.php/Installation

New user-visible features
-------------------------
  a) WiMAX net device: Allow to simulated IEEE 802.16 point to multi-point based networks 

  b) Distributed simulation for point-to-point networks using the Message 
     Passing Interface (MPI) standard.
    
  c) Matrix propagation loss model uses a two-dimensional matrix of path loss indexed 
     by source and destination nodes.

  d) Topology read system: Allows quick and easy creation of large topologies by reading 
     Inet or Orbis files

  e) Gauss-Markov mobility model: Adds 3-d adaptation of Gauss-Markov mobility model which 
     has both memory and variability

  f) Steady-state random waypoint mobility model: Based on random waypoint mobility (RWM) model for case when 